--- a/ui/about_window.ui
+++ b/ui/about_window.ui
@@ -106,7 +106,7 @@ p, li { white-space: pre-wrap; }
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'宋体'; font-size:12pt; font-weight:600; font-style:normal;&quot;&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'SimSun'; font-weight:400;&quot;&gt;1.版本号：V1.0&lt;br /&gt;&lt;br /&gt;2.开发时间：2023/11/01-2023/12/21&lt;br /&gt;&lt;br /&gt;3.开发者信息：&lt;br /&gt;	学校：广州商学院&lt;br /&gt;	学院：信息技术与工程学院&lt;br /&gt;	专业：软件工程&lt;br /&gt;	班级：22级4班&lt;br /&gt;	姓名：苏增烨、黄景彬、李峥扬&lt;br /&gt;	学号：202206120166、202206120075、202206120070&lt;br /&gt;	&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'SimSun'; font-weight:400;&quot;&gt;1.版本号：V1.1.2&lt;br /&gt;&lt;br /&gt;2.开发时间：2024.3.7-2024.5.30&lt;br /&gt;&lt;br /&gt;3.开发者信息：&lt;br /&gt;	学校：北京邮电大学&lt;br /&gt;	学院：计算机学院（国家示范性软件学院）&lt;br /&gt;	专业：软件工程&lt;br /&gt;	班级：2022211316班&lt;br /&gt;	姓名：王馨田、熊瑞、李佳然&lt;br /&gt;	学号：2022211474、2022211472、2022211476&lt;br /&gt;	&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
    </widget>
