--- a/ui/book_manage_window.ui
+++ b/ui/book_manage_window.ui
@@ -144,6 +144,12 @@
        <property name="styleSheet">
         <string notr="true">font: 12pt &quot;宋体&quot;;</string>
        </property>
+       <attribute name="verticalHeaderVisible">
+        <bool>true</bool>
+       </attribute>
+       <attribute name="verticalHeaderDefaultSectionSize">
+        <number>30</number>
+       </attribute>
        <column>
         <property name="text">
          <string>书名</string>
