--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -14,216 +14,239 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout">
-    <property name="leftMargin">
-     <number>5</number>
+   <widget class="QGraphicsView" name="graphicsView">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>410</y>
+      <width>111</width>
+      <height>111</height>
+     </rect>
     </property>
-    <property name="topMargin">
-     <number>5</number>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/media/img/bbupt.jpg);</string>
     </property>
-    <property name="rightMargin">
-     <number>5</number>
+   </widget>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>10</y>
+      <width>671</width>
+      <height>531</height>
+     </rect>
     </property>
-    <property name="bottomMargin">
-     <number>5</number>
+    <layout class="QVBoxLayout" name="verticalLayout_2">
+     <item>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="Line" name="line_3">
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>2</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(222, 222, 222);</string>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label">
+         <property name="font">
+          <font>
+           <family>13 宋体</family>
+           <pointsize>14</pointsize>
+           <weight>50</weight>
+           <italic>false</italic>
+           <bold>false</bold>
+          </font>
+         </property>
+         <property name="cursor">
+          <cursorShape>UpArrowCursor</cursorShape>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">font: 14pt bold &quot;宋体&quot;;
+border-image: url(:/media/img/buptlibrary.jpg);</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QLabel" name="label_2">
+           <property name="styleSheet">
+            <string notr="true">font: 12pt &quot;宋体&quot;;</string>
+           </property>
+           <property name="text">
+            <string>用户:</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="current_username_label">
+           <property name="styleSheet">
+            <string notr="true">font: 12pt &quot;宋体&quot;;</string>
+           </property>
+           <property name="text">
+            <string>张三</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_4">
+           <property name="styleSheet">
+            <string notr="true">font: 12pt &quot;宋体&quot;;</string>
+           </property>
+           <property name="text">
+            <string>角色:</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="current_role_label">
+           <property name="styleSheet">
+            <string notr="true">font: 12pt &quot;宋体&quot;;</string>
+           </property>
+           <property name="text">
+            <string>普通用户</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButton">
+           <property name="styleSheet">
+            <string notr="true">font: 12pt &quot;宋体&quot;;
+color: rgb(255, 255, 255);
+background-color: rgb(49, 51, 140);</string>
+           </property>
+           <property name="text">
+            <string>登出</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <widget class="Line" name="line_2">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>2</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(222, 222, 222);</string>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QStackedWidget" name="stackedWidget">
+       <widget class="QWidget" name="page"/>
+       <widget class="QWidget" name="page_2"/>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QListWidget" name="listWidget">
+    <property name="geometry">
+     <rect>
+      <x>6</x>
+      <y>6</y>
+      <width>121</width>
+      <height>541</height>
+     </rect>
     </property>
-    <property name="spacing">
-     <number>3</number>
+    <property name="maximumSize">
+     <size>
+      <width>200</width>
+      <height>16777215</height>
+     </size>
     </property>
-    <item row="0" column="0">
-     <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="1,0,5">
-      <item>
-       <widget class="QListWidget" name="listWidget">
-        <property name="maximumSize">
-         <size>
-          <width>200</width>
-          <height>16777215</height>
-         </size>
-        </property>
-        <item>
-         <property name="text">
-          <string>主页</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>借阅信息</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>图书管理</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>反馈交流</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>关于</string>
-         </property>
-        </item>
-       </widget>
-      </item>
-      <item>
-       <widget class="Line" name="line">
-        <property name="maximumSize">
-         <size>
-          <width>2</width>
-          <height>16777215</height>
-         </size>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(222, 222, 222);</string>
-        </property>
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <layout class="QVBoxLayout" name="verticalLayout_2">
-        <item>
-         <layout class="QVBoxLayout" name="verticalLayout">
-          <item>
-           <widget class="Line" name="line_3">
-            <property name="maximumSize">
-             <size>
-              <width>16777215</width>
-              <height>2</height>
-             </size>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">background-color: rgb(222, 222, 222);</string>
-            </property>
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="label">
-            <property name="font">
-             <font>
-              <family>12 宋体</family>
-              <pointsize>14</pointsize>
-              <weight>50</weight>
-              <italic>false</italic>
-              <bold>false</bold>
-             </font>
-            </property>
-            <property name="cursor">
-             <cursorShape>UpArrowCursor</cursorShape>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">font: 14pt bold &quot;宋体&quot;;</string>
-            </property>
-            <property name="text">
-             <string>广州商学院图书管理系统</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <layout class="QHBoxLayout" name="horizontalLayout">
-            <item>
-             <widget class="QLabel" name="label_2">
-              <property name="styleSheet">
-               <string notr="true">font: 12pt &quot;宋体&quot;;</string>
-              </property>
-              <property name="text">
-               <string>用户:</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLabel" name="current_username_label">
-              <property name="styleSheet">
-               <string notr="true">font: 12pt &quot;宋体&quot;;</string>
-              </property>
-              <property name="text">
-               <string>张三</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLabel" name="label_4">
-              <property name="styleSheet">
-               <string notr="true">font: 12pt &quot;宋体&quot;;</string>
-              </property>
-              <property name="text">
-               <string>角色:</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLabel" name="current_role_label">
-              <property name="styleSheet">
-               <string notr="true">font: 12pt &quot;宋体&quot;;</string>
-              </property>
-              <property name="text">
-               <string>普通用户</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <spacer name="horizontalSpacer">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-            <item>
-             <widget class="QPushButton" name="pushButton">
-              <property name="styleSheet">
-               <string notr="true">font: 12pt &quot;宋体&quot;;</string>
-              </property>
-              <property name="text">
-               <string>登出</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
-         </layout>
-        </item>
-        <item>
-         <widget class="Line" name="line_2">
-          <property name="maximumSize">
-           <size>
-            <width>16777215</width>
-            <height>2</height>
-           </size>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">background-color: rgb(222, 222, 222);</string>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QStackedWidget" name="stackedWidget">
-          <widget class="QWidget" name="page"/>
-          <widget class="QWidget" name="page_2"/>
-         </widget>
-        </item>
-       </layout>
-      </item>
-     </layout>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(49, 51, 140);</string>
+    </property>
+    <item>
+     <property name="text">
+      <string>主页</string>
+     </property>
     </item>
-   </layout>
+    <item>
+     <property name="text">
+      <string>借阅信息</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>图书管理</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>反馈交流</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>关于</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="Line" name="line">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>10</y>
+      <width>2</width>
+      <height>192</height>
+     </rect>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>2</width>
+      <height>16777215</height>
+     </size>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(222, 222, 222);</string>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <zorder>listWidget</zorder>
+   <zorder>graphicsView</zorder>
+   <zorder>layoutWidget</zorder>
+   <zorder>line</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -231,11 +254,13 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>23</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="pictures.qrc"/>
+ </resources>
  <connections/>
 </ui>
